--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,3 +22,21 @@
 .no-padding {
   padding: 0px !important;
 }
+
+.logout {
+ padding-left: 0px;
+}
+
+.user-name {
+ padding-top: 15px;
+}
+
+.nav.navbar-right li {
+ .btn {
+  color: #fff !important;
+  margin-top: 5%;
+ }
+ .btn-danger:hover {
+  background-color: darken(#d9534f, 20%) !important;
+ }
+}
