--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <!-- Size should be 144 x 144 pixels -->
 
     <%= javascript_include_tag "application" %>
+    <%= javascript_pack_tag "application" %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
